[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/conthrax-sb.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/MainMenu/MainMenuOptions.gd" type="Script" id=2]
[ext_resource path="res://Assets/Graphics/Backgrounds/wallpaper.png" type="Texture" id=3]
[ext_resource path="res://Interface/components/MainMenuButton/MainMenuButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 268.541, 151.4 )
scale = Vector2( 0.28, 0.28 )
z_index = -5
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 523.0
margin_bottom = 300.0

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]
layer = 5

[node name="MainMenuOptions" type="VBoxContainer" parent="Control/CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -148.0
margin_top = -98.0
margin_right = -10.0
custom_constants/separation = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" parent="Control/CanvasLayer/MainMenuOptions" instance=ExtResource( 4 )]
margin_right = 138.0
margin_bottom = 26.0
id = "Continue"

[node name="NewGame" parent="Control/CanvasLayer/MainMenuOptions" instance=ExtResource( 4 )]
margin_top = 36.0
margin_right = 138.0
margin_bottom = 62.0
id = "New Game"

[node name="QuitGame" parent="Control/CanvasLayer/MainMenuOptions" instance=ExtResource( 4 )]
margin_top = 72.0
margin_right = 138.0
margin_bottom = 98.0
id = "Quit"

[node name="Title" type="CenterContainer" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -150.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Title"]
margin_left = 1.0
margin_right = 149.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "STARCHILD"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 523.0
margin_bottom = 300.0
